third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/integer/capital-bin.stderr
TOML parse error at line 1, column 16
  |
1 | capital-bin = 0B0
  |                ^
expected newline, `#`
